added Tests GuavaEclipseTest works as unittest without frontend GuavaEclipseSwtBotTest works as integrationtest with running eclipse...